while/tests/valid/ListAccess_Valid_4.while
[char] f(string str) {
    [char] r = [];
    for(int i=0;i!=|str|;i=i+1) {
        r = r ++ [str[i]];
    }
    return r;
}

void main() {
    [char] r = f("Hello");
    print r;
}
