while/tests/invalid-parsing/Parsing_Invalid_22.while
void f() {
    for(int i=0;i!=10;break) {
    }
}